@@ -1,3 +1,10 @@
+SimpleComplex/Utils 1.x, 2018-05-23
+-----------------------------------
+- FreezableInterface.
+- ExplorableFreezable renamed (from Freezable), supports reserving more
+  non-explorable properties, freezes recursively, and unfreezes clone.
+- Freezable DateTime extension.
+
 SimpleComplex/Utils 1.x, 2018-05-21
 -----------------------------------
 - phpunit test helpers.
